--- a/app/templates/teachers/share-licenses-component.jade
+++ b/app/templates/teachers/share-licenses-component.jade
@@ -10,7 +10,7 @@
     .col-xs-8
       input(v-model:value="teacherSearchInput")
     .col-xs-4
-      button.btn.btn-navy(v-on:click="findTeacher")
+      button.btn.btn-navy(v-on:click="addTeacher")
         span.m-l-1.m-r-1
           {{ $t("share_licenses.add_teacher_button") }}
   
