Fix reopening modal, add prepaid card text

--- a/app/styles/courses/enrollments-view.sass
+++ b/app/styles/courses/enrollments-view.sass
@@ -21,7 +21,10 @@
       
     &.pending-prepaid-card
       background: #6e939f
-      
+
+  .share-licenses-link
+    color: black
+    text-decoration: underline    
   
   .how-to-enroll
     padding: 10px
