--- a/app/styles/teachers/share-licenses-component.sass
+++ b/app/styles/teachers/share-licenses-component.sass
@@ -8,8 +8,21 @@
   
   .error-message
     color: red
+    text-align: right
   
+  h4
+    font-size: 16px
+    font-weight: 600
   input
     width: 100%
+    border: 1px solid black
   .add-teacher-btn
     width: 100%
+  
+  .subheader-text
+    margin-left: 8%
+    margin-right: 8%
+    
+  .footer-text
+    margin-left: 9%
+    margin-right: 9%
