--- a/app/templates/teachers/share-licenses-modal.jade
+++ b/app/templates/teachers/share-licenses-modal.jade
@@ -1,7 +1,7 @@
 extends /templates/core/modal-base-flat
 
 block modal-header
-  h3
+  h3.text-center
     span(data-i18n="teacher.share_licenses")
       | Share Licenses
 
