Show creator of shared prepaids

--- a/app/styles/courses/enrollments-view.sass
+++ b/app/styles/courses/enrollments-view.sass
@@ -24,7 +24,10 @@
 
   .share-licenses-link
     color: black
-    text-decoration: underline    
+    text-decoration: underline
+  
+  .share-details
+    text-align: right
   
   .how-to-enroll
     padding: 10px
