--- a/app/styles/teachers/share-licenses-component.sass
+++ b/app/styles/teachers/share-licenses-component.sass
@@ -1,5 +1,9 @@
 @import "app/styles/style-flat-variables"
 
+#share-licenses-modal
+  .modal-header
+    text-transform: capitalize
+
 #share-licenses-component
   .list-item
     transition: all 0.5s ease-out
