--- a/app/templates/teachers/share-licenses-modal.jade
+++ b/app/templates/teachers/share-licenses-modal.jade
@@ -1,9 +1,8 @@
 extends /templates/core/modal-base-flat
 
 block modal-header
-  h3.text-center
-    span(data-i18n="teacher.share_licenses")
-      | Share Licenses
+  h3.text-center.modal-header
+    span(data-i18n="share_licenses.share_licenses")
 
 block modal-body
   #share-licenses-component
