--- a/app/styles/teachers/share-licenses-component.sass
+++ b/app/styles/teachers/share-licenses-component.sass
@@ -13,6 +13,9 @@
   .error-message
     color: red
     text-align: right
+    a
+      color: inherit
+      text-decoration: underline
   
   h4
     font-size: 16px
