--- a/app/templates/teachers/share-licenses-component.jade
+++ b/app/templates/teachers/share-licenses-component.jade
@@ -38,6 +38,6 @@
     p.small
       {{ $t("share_licenses.footer") }}
   
-    button.btn.btn-lg.btn-navy-alt
+    button.btn.btn-lg.btn-navy-alt(data-dismiss="modal")
       span.m-l-3.m-r-3
         {{ $t("general.close_window") }}
