--- a/app/styles/courses/enrollments-view.sass
+++ b/app/styles/courses/enrollments-view.sass
@@ -22,7 +22,7 @@
     &.pending-prepaid-card
       background: #6e939f
 
-  .share-details a
+  .share-details .share-licenses-link
     color: black
     text-decoration: underline
   
