--- a/app/templates/courses/enrollments-view.jade
+++ b/app/templates/courses/enrollments-view.jade
@@ -106,15 +106,16 @@ mixin prepaidCard(prepaid, className)
       .pull-left(data-i18n="teacher.end_date")
       .pull-right= moment(prepaid.get('endDate')).utc().format('l')
       .clearfix
-  .share-details.small-details.m-b-2
-    if prepaid.get('creator') === me.id
-      a.share-licenses-link(data-prepaid-id=prepaid.id)
-        span(data-i18n="share_licenses.share_licenses")
-    else if !prepaid.creator.loading
-      span(data-i18n="share_licenses.shared_by")
-      = " "
-      a(href="mailto:" + prepaid.creator.get('email'))
-        span= prepaid.creator.broadName()
+  if prepaid.get('type') === 'course'
+    .share-details.small-details.m-b-2
+      if prepaid.get('creator') === me.id
+        a.share-licenses-link(data-prepaid-id=prepaid.id)
+          span(data-i18n="share_licenses.share_licenses")
+      else if !prepaid.creator.loading
+        span(data-i18n="share_licenses.shared_by")
+        = " "
+        a(href="mailto:" + prepaid.creator.get('email'))
+          span= prepaid.creator.broadName()
 
 mixin addCredits
   .text-center.m-b-3.m-t-3
