Record teacherID when redeeming a license, show exhausted licenses

--- a/app/styles/courses/enrollments-view.sass
+++ b/app/styles/courses/enrollments-view.sass
@@ -22,6 +22,9 @@
     &.pending-prepaid-card
       background: #6e939f
 
+    &.empty-prepaid-card
+      background: #bbbbbb
+
   .share-details .share-licenses-link
     color: black
     text-decoration: underline
