--- a/app/templates/courses/enrollments-view.jade
+++ b/app/templates/courses/enrollments-view.jade
@@ -52,7 +52,8 @@ block content
       h4#enrollments-blurb(data-i18n="teacher.enrollments_blurb")  
       - var available = view.state.get('prepaidGroups').available
       - var pending = view.state.get('prepaidGroups').pending
-      - var anyPrepaids = available || pending
+      - var empty = view.state.get('prepaidGroups').empty
+      - var anyPrepaids = available || pending ||  empty
       
       .text-center.m-t-3
         span.glyphicon.glyphicon-question-sign
@@ -75,6 +76,13 @@ block content
                 for prepaid in pending
                   .col-sm-4.col-xs-6
                     +prepaidCard(prepaid, 'pending-prepaid-card')
+
+            if _.size(empty) > 0
+              h5.m-b-1(data-i18n="teacher.empty_credits")
+              .row
+                for prepaid in empty
+                  .col-sm-4.col-xs-6
+                    +prepaidCard(prepaid, 'empty-prepaid-card')
 
           #actions-col.col-md-3
             +addCredits
