--- a/app/templates/courses/enrollments-view.jade
+++ b/app/templates/courses/enrollments-view.jade
@@ -67,21 +67,21 @@ block content
               h5.m-b-1(data-i18n="teacher.available_credits")
               .row
                 for prepaid in available
-                  .col-sm-4.col-xs-6
+                  .prepaid-card-container.col-sm-4.col-xs-6
                     +prepaidCard(prepaid)
 
             if _.size(pending) > 0
               h5.m-b-1.m-t-3(data-i18n="teacher.pending_credits")
               .row
                 for prepaid in pending
-                  .col-sm-4.col-xs-6
+                  .prepaid-card-container.col-sm-4.col-xs-6
                     +prepaidCard(prepaid, 'pending-prepaid-card')
 
             if _.size(empty) > 0
               h5.m-b-1(data-i18n="teacher.empty_credits")
               .row
                 for prepaid in empty
-                  .col-sm-4.col-xs-6
+                  .prepaid-card-container.col-sm-4.col-xs-6
                     +prepaidCard(prepaid, 'empty-prepaid-card')
 
           #actions-col.col-md-3
